--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.m03mooespinosap.M03MOOEspinosaP</exec.mainClass>
     </properties>
+    <name>M03MOOEspinosaP</name>
 </project>
